[package]
description = "Common code used through the DataHaven network"
edition = { workspace = true }
name = "datahaven-runtime-common"
version = "0.1.0"

[dependencies]
codec = { workspace = true }
fp-account = { workspace = true }
frame-support = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true, features = ["serde"] }
sp-runtime = { workspace = true, features = ["serde"] }
xcm = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "polkadot-primitives/std",
    "polkadot-runtime-common/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "xcm/std",
]

runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "polkadot-primitives/runtime-benchmarks",
    "polkadot-runtime-common/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []
