[package]
authors = ["Snowfork <contact@snowfork.com>"]
categories = ["cryptography::cryptocurrencies"]
description = "Snowbridge Outbound Queue Runtime API V2"
edition.workspace = true
license = "Apache-2.0"
name = "snowbridge-outbound-queue-v2-runtime-api"
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
snowbridge-core = { workspace = true }
snowbridge-merkle-tree = { workspace = true }
snowbridge-outbound-queue-primitives = { workspace = true }
sp-api = { workspace = true }
sp-std = { workspace = true }
xcm = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "scale-info/std",
    "snowbridge-core/std",
    "snowbridge-merkle-tree/std",
    "snowbridge-outbound-queue-primitives/std",
    "sp-api/std",
    "sp-std/std",
    "xcm/std",
]
