[package]
authors = ["Snowfork <contact@snowfork.com>"]
categories = ["cryptography::cryptocurrencies"]
description = "Snowbridge System Runtime API V2"
edition.workspace = true
license = "Apache-2.0"
name = "snowbridge-system-v2-runtime-api"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[dependencies]
codec = { features = ["derive"], workspace = true }
snowbridge-core.workspace = true
sp-api.workspace = true
xcm.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "snowbridge-core/std",
    "sp-api/std",
    "xcm/std",
]
