[package]
authors = ["Snowfork <contact@snowfork.com>"]
categories = ["cryptography::cryptocurrencies"]
description = "Snowbridge System Runtime API"
edition.workspace = true
license = "Apache-2.0"
name = "snowbridge-system-runtime-api"
repository.workspace = true
version = "0.13.0"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[dependencies]
codec = { features = ["derive"], workspace = true }
snowbridge-core.workspace = true
sp-api.workspace = true
xcm.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "snowbridge-core/std",
    "sp-api/std",
    "xcm/std",
]
