[package]
authors = ["Snowfork <contact@snowfork.com>"]
categories = ["cryptography::cryptocurrencies"]
description = "Snowbridge Core"
edition.workspace = true
license = "Apache-2.0"
name = "snowbridge-core"
repository.workspace = true
version.workspace = true

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[dependencies]
codec = { workspace = true }
hex-literal = { workspace = true, default-features = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde = { optional = true, features = ["alloc", "derive"], workspace = true }

polkadot-parachain-primitives = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }

ethabi = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
xcm-executor = { workspace = true }

bp-relayers = { workspace = true }

[dev-dependencies]
hex = { workspace = true, default-features = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "polkadot-parachain-primitives/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "xcm-executor/runtime-benchmarks",
]
serde = ["dep:serde", "scale-info/serde"]
std = [
    "bp-relayers/std",
    "codec/std",
    "ethabi/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "polkadot-parachain-primitives/std",
    "scale-info/std",
    "serde/std",
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "xcm/std",
]
