[package]
authors = ["Snowfork <contact@snowfork.com>"]
categories = ["cryptography::cryptocurrencies"]
description = "Snowbridge test utilities"
edition.workspace = true
license = "Apache-2.0"
name = "snowbridge-test-utils"
repository.workspace = true
version = { workspace = true }

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[dependencies]
codec = { workspace = true, default-features = true }
frame-benchmarking = { optional = true, workspace = true, default-features = true }
frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
hex = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
pallet-xcm = { workspace = true, default-features = true }
scale-info = { features = [
    "derive",
], workspace = true, default-features = true }
snowbridge-outbound-queue-primitives = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-std = { workspace = true, default-features = true }
xcm = { workspace = true, default-features = true }
xcm-builder = { workspace = true, default-features = true }
xcm-executor = { workspace = true, default-features = true }

[features]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "xcm-executor/runtime-benchmarks",
]
