[package]
authors = ["Snowfork <contact@snowfork.com>"]
categories = ["cryptography::cryptocurrencies"]
description = "Snowbridge Verification Primitives"
edition.workspace = true
license = "Apache-2.0"
name = "snowbridge-verification-primitives"
repository.workspace = true
version.workspace = true

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[dependencies]
codec = { workspace = true }
frame-support = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
snowbridge-beacon-primitives = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "scale-info/std",
    "snowbridge-beacon-primitives/std",
    "sp-core/std",
]
